kubernetes/nginx/03-deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  labels:
    app: nginx

spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: storage-volume
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
            limits:
              cpu: "20m"
              memory: "20Mi"
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: pvc-nginx
