kubernetes/nginx/02-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: nginx
