kubernetes/nginx/04-ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  labels:
    app: nginx

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`#HOMELAB_DOMAIN#`)
      kind: Rule
      services:
        - name: nginx
          port: 80
  tls:
    certResolver: default
